--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,27 @@
+
 {
     "version": 2,
-    "name": "cloudnotes",
-    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [
+    "builds": [
         {
-          "src": "/(.*)",
-          "dest": "./index.js",
-          "methods": ["GET", "POST", "PUT", "DELETE"]
+            "src": "./index.js",
+            "use": "@vercel/node"
         }
-      ]
-  }
+    ],
+    "rewrites": [
+        { "source": "/(.*)", "destination": "./index.js" }
+    ],
+    "headers": [
+        {
+          "source": "/(.*)",
+          "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "*" }
+          ]
+        },
+        {
+          "source": "/vercel_app_domain_name/(.*)",
+          "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "*" }
+          ]
+        }  
+    ]
+}
