--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "version": 2,
+    "name": "cloudnotes",
+    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "headers": [
     {
       "source": "/api/(.*)",
